Add two main sections

--- a/apps/static-website/index.html
+++ b/apps/static-website/index.html
@@ -29,7 +29,12 @@
       </div>
     </header>
     <main>
-      
+      <section class="dashboard">
+        <h2 class="sr-only">Dashboard</h2>
+      </section>
+      <section class="overview">
+        <h2 class="overview__title">Overview - Today</h2>
+      </section>
     </main>
     <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
