Add dashboard card style

--- a/apps/static-website/index.html
+++ b/apps/static-website/index.html
@@ -31,6 +31,23 @@
     <main>
       <section class="dashboard">
         <h2 class="sr-only">Dashboard</h2>
+        <div class="dashboard__content">
+          <article class="dashboard__item dashboard__item--meta">
+            <h3 class="sr-only">Meta</h3>
+            <a class="dashboard__link">
+              <img src="./assets/images/icon-facebook.svg" alt="">
+              <span>@nathanf</span>
+            </a>
+            <div class="dashboard__counter">
+              <span class="dashboard__counter-value">1987</span>
+              <span class="dashboard__label">Followers</p>
+            </div>
+            <div class="dashboard__indicator">
+              <img src="./assets/images/icon-up.svg" />
+              <span>12 Today</span>
+            </div>
+          </article>
+        </div>
       </section>
       <section class="overview">
         <h2 class="overview__title">Overview - Today</h2>
