Add overview card styles

--- a/apps/static-website/index.html
+++ b/apps/static-website/index.html
@@ -42,15 +42,69 @@
               <span class="dashboard__counter-value">1987</span>
               <span class="dashboard__label">Followers</p>
             </div>
-            <div class="dashboard__indicator">
+            <div class="dashboard__indicator dashboard__indicator--success">
               <img src="./assets/images/icon-up.svg" />
               <span>12 Today</span>
+            </div>
+          </article>
+          <article class="dashboard__item dashboard__item--twitter">
+            <h3 class="sr-only">Twitter</h3>
+            <a class="dashboard__link">
+              <img src="./assets/images/icon-twitter.svg" alt="">
+              <span>@nathanf</span>
+            </a>
+            <div class="dashboard__counter">
+              <span class="dashboard__counter-value">1044</span>
+              <span class="dashboard__label">Followers</p>
+            </div>
+            <div class="dashboard__indicator dashboard__indicator--success">
+              <img src="./assets/images/icon-up.svg" />
+              <span>99 Today</span>
+            </div>
+          </article>
+          <article class="dashboard__item dashboard__item--instagram">
+            <h3 class="sr-only">Instagram</h3>
+            <a class="dashboard__link">
+              <img src="./assets/images/icon-instagram.svg" alt="">
+              <span>@realnathanf</span>
+            </a>
+            <div class="dashboard__counter">
+              <span class="dashboard__counter-value">11k</span>
+              <span class="dashboard__label">Followers</p>
+            </div>
+            <div class="dashboard__indicator dashboard__indicator--success">
+              <img src="./assets/images/icon-up.svg" />
+              <span>1099 Today</span>
+            </div>
+          </article>
+          <article class="dashboard__item dashboard__item--youtube">
+            <h3 class="sr-only">Youtube</h3>
+            <a class="dashboard__link">
+              <img src="./assets/images/icon-youtube.svg" alt="">
+              <span>Nathan F.</span>
+            </a>
+            <div class="dashboard__counter">
+              <span class="dashboard__counter-value">8239</span>
+              <span class="dashboard__label">Followers</p>
+            </div>
+            <div class="dashboard__indicator dashboard__indicator--error">
+              <img src="./assets/images/icon-down.svg" />
+              <span>144 Today</span>
             </div>
           </article>
         </div>
       </section>
       <section class="overview">
         <h2 class="overview__title">Overview - Today</h2>
+        <article class="overview-card">
+          <h3 class="overview-card__title">Page views</h3>
+          <img class="overview-card__image" src="./assets/images/icon-facebook.svg" alt="">
+          <span class="overview-card__counter">87</span>
+          <div class="overview-card__indicator overview-card__indicator--success">
+            <img src="./assets/images/icon-up.svg" />
+            <span>3%</span>
+          </div>
+        </article>
       </section>
     </main>
     <footer class="attribution">
